# translation_service

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflows/: CI.yaml
app/: __init__.py  exceptions.py  main.py  middleware.py  settings.py
app/connections/: mongo.py  sentry.py
app/models/: base.py  translate.py
app/repositories/: base.py  translate.py
app/routers/: __init__.py  health.py  translate.py  v1.py
app/schemas/: base.py  google_translate.py  translate.py
app/services/: google_translate.py  translate.py
migrations/: 20240205145938_indexes.py
tests/: conftest.py
tests/api/: conftest.py  test_health.py  test_translate.py
tests/unit/: test_translate.py
